--- a/toolkit/styles/plain/css/valuebutton.css
+++ b/toolkit/styles/plain/css/valuebutton.css
@@ -28,7 +28,19 @@
 
 .toolkit-button.toolkit-valuebutton > .toolkit-cell {
     text-align: left;
-    width: 70%;
+    width: 60%;
+    box-sizing: border-box;
+}
+.toolkit-button.toolkit-valuebutton.toolkit-vertical-bar > .toolkit-cell {
+    padding-left: 16px;
+}
+.toolkit-button.toolkit-valuebutton.toolkit-vertical-bar.toolkit-has-marker > .toolkit-cell {
+    padding-left: 12px;
+}
+.toolkit-button.toolkit-valuebutton.toolkit-horizontal-bar > .toolkit-cell {
+    padding-bottom: 6px;
+}
+.toolkit-button.toolkit-valuebutton.toolkit-horizontal-bar.toolkit-has-marker > .toolkit-cell {
     padding-bottom: 12px;
 }
 
@@ -47,7 +59,7 @@
 .toolkit-valuebutton.toolkit-warn {
     
 }
-.toolkit-valuebutton > .toolkit-value > .toolkit-input {
+.toolkit-valuebutton > .toolkit-value {
     background: rgba(0,0,0,0.033);
     border: none;
     position: absolute;
@@ -55,46 +67,61 @@
     right: 0;
     bottom: 0;
     width: 40%;
-    -webkit-border-top-right-radius: 5px;
-    -webkit-border-bottom-right-radius: 5px;
-    -moz-border-radius-topright: 5px;
-    -moz-border-radius-bottomright: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
 }
+.toolkit-valuebutton > .toolkit-value > .toolkit-input {
+    width: 100%;
+    height: 100%;
+}
+
 .toolkit-valuebutton.toolkit-dragging > .toolkit-cell > .toolkit-label,
 .toolkit-valuebutton.toolkit-scrolling > .toolkit-cell > .toolkit-label {
-    background-color: #002f42;
-    color: white;
-    text-shadow: 0px -1px 0px black;
-    -webkit-border-radius: 4px;
-    -moz-border-radius:    4px;
-    border-radius:         4px;
+    
 }
 
 .toolkit-valuebutton > .toolkit-bar {
-    border: 1px solid;
-    border-color: #ddd #f3f3f3 #fff #e8e8e8;
     position: absolute;
-    bottom: 10%;
-    width: calc(60% - 24px);
-    left: 16px;
 }
-.toolkit-valuebutton.toolkit-vertical > .toolkit-bar {
+.toolkit-valuebutton.toolkit-vertical-bar > .toolkit-bar {
     width: 8px;
-    height: 100%;
+    height: calc(100% - 12px);
+    left: 4px;
 }
-.toolkit-valuebutton.toolkit-horizontal > .toolkit-bar {
+.toolkit-valuebutton.toolkit-horizontal-bar > .toolkit-bar {
+    width: calc(60% - 12px);
     height: 2px;
-    margin-top: 2px;
+    bottom: 10%;
+    left: 6px;
 }
 
 .toolkit-valuebutton > .toolkit-bar >  .toolkit-base {
     background: #002a42;
+    position: absolute;
+    left: 0;
 }
-.toolkit-valuebutton.toolkit-vertical > .toolkit-bar >  .toolkit-base {
+.toolkit-valuebutton.toolkit-vertical-bar > .toolkit-bar >  .toolkit-base {
     width: 8px;
+    bottom: 0;
 }
-.toolkit-valuebutton.toolkit-horizontal > .toolkit-bar >  .toolkit-base {
+.toolkit-valuebutton.toolkit-horizontal-bar > .toolkit-bar >  .toolkit-base {
     height: 2px;
+    top: 0;
+}
+
+.toolkit-valuebutton > .toolkit-marker {
+    box-sizing: content-box;
+    border-style: solid;
+    border-width: 4px;
+    width: 0;
+    height: 0;
+    position: absolute;
+}
+.toolkit-valuebutton.toolkit-vertical-bar > .toolkit-marker {
+    border-color: transparent #002A42 transparent transparent;
+    left: 10px;
+    bottom: 2px;
+}
+.toolkit-valuebutton.toolkit-horizontal-bar > .toolkit-marker {
+    border-color: #002A42 transparent transparent transparent;
+    left: 2px;
+    bottom: calc(10% - 1px);
 }
